--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
-<html>
-
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width">
-  <title>replit</title>
-  <link href="style.css" rel="stylesheet" type="text/css" />
-</head>
-
-<body>
-  Hello world
-  <script src="script.js"></script>
-
- <!--
-This script places a badge on your repl's full-browser view back to your repl's cover page. Try various colors for the theme: dark, light, red, orange, yellow, lime, green, teal, blue, blurple, magenta, pink!
--->
-<script src="https://replit.com/public/js/replit-badge.js" theme="blue" defer></script> 
-</body>
-
+<!-- ICS2O-Unit6-04-HTML -->
+<html lang="en-ca"> 
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Volume of rectangle" />
+    <meta name="keywords" content="mths, ics2o" />
+    <meta name="author" content="Jaejun Lee" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <title>Volume of a rectangle</title>
+    <link rel="canonical" href="https://github.com/jaejun-lee06/ICS2O-Unit6-04-EXTRA" />
+    <link rel="manifest" href="/ICS2O-Unit6-04-EXTRA/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-green.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.light_green-green.min.css"></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
+  </head>
+  <body>
+  <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+      <header class="mdl-layout__header">
+        <div class="mdl-layout__header-row">
+          <span class="mdl-layout-title">Area of a Rectanlge, with a Query String</span>
+        </div>
+      </header>
+      <main class="mdl-layout__content">
+        <h4>Formula</h4>
+          <h4>a = l x w</h4>
+          <div id="answers">
+            <h4>The dimensions are: </h4>
+            <div id="dimensions"></div>
+            <br>
+            <div id="area"></div>
+          </div>
+      </main>
+    </div>
+  </body>
 </html>
